@@ -1,7 +1,9 @@
 add_subdirectory(${WEBCORE_DIR}/platform/gtk/po)
 
 # This allows exposing a 'gir' target which builds all GObject introspection files.
-add_custom_target(gir ALL DEPENDS ${GObjectIntrospectionTargets})
+if (ENABLE_INTROSPECTION)
+    add_custom_target(gir ALL DEPENDS ${GObjectIntrospectionTargets})
+endif ()
 
 list(APPEND DocumentationDependencies
     GObjectDOMBindings
