@@ -1,3 +1,14 @@
+2014-11-01  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        REGRESSION(CMake): Make it possible to build without introspection
+        https://bugs.webkit.org/show_bug.cgi?id=138006
+
+        Reviewed by Philippe Normand.
+
+        Do not install introspection files when introspection is disabled.
+
+        * PlatformGTK.cmake:
+
 2014-10-31  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         Use std::unique_ptr for TypeCountSet
